# csc299-project

./: README.md
git-backup/task2/: README.md
task1/: .gitignore  README.md  task_manager.py
task2/: .gitignore  README.md  task_manager_V2.py
tasks3/: pyproject.toml
tasks3/src/tasks3/: __init__.py
tasks3/tests/: test_testing_application.py
tasks4/: pyproject.toml
