[project]
name = "tasks4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marcin Narejko", email = "mnarejko@depaul.edu" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
tasks4 = "tasks4:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
